force-app/main/default/objects/Event_Communication__c/Event_Communication__c.object-meta.xml
<CustomObject>
    <description>Custom object created by Better Rehab to send communications with Pendula</description>
    <label>Event Communication</label>
    <nameField>
        <displayFormat>EC-{000000}</displayFormat>
        <label>Event Communication Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Communications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>