force-app/main/default/objects/Event_Communication__c/fields/Client_Event_Relation__c.field-meta.xml
<CustomField>
    <fullName>Client_Event_Relation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Event Relation</label>
    <referenceTo>Client_Event_Relation__c</referenceTo>
    <relationshipLabel>Event Communications</relationshipLabel>
    <relationshipName>Event_Communications</relationshipName>
    <type>Lookup</type>
</CustomField>