force-app/main/default/objects/Event_Communication__c/fields/Days_until_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Days_until_Start_Date__c</fullName>
    <formula>Start__c - NOW()</formula>
    <label>Days until Start Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>