force-app/main/default/objects/Event_Communication__c/fields/Event_Link__c.field-meta.xml
<CustomField>
    <fullName>Event_Link__c</fullName>
    <formula>Client_Event_Relation__r.Event_Link__c</formula>
    <inlineHelpText>For recurring events, this is the first recurrence event link</inlineHelpText>
    <label>Event Link</label>
    <type>Text</type>
</CustomField>