force-app/main/default/objects/Event_Communication__c/fields/Event_Recurrence__c.field-meta.xml
<CustomField>
    <fullName>Event_Recurrence__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event Recurrence</label>
    <referenceTo>Event_Recurrence__c</referenceTo>
    <relationshipLabel>Event Communications</relationshipLabel>
    <relationshipName>Event_Communications</relationshipName>
    <type>Lookup</type>
</CustomField>