force-app/main/default/objects/Event_Communication__c/fields/Event_Recurrences__c.field-meta.xml
<CustomField>
    <fullName>Event_Recurrences__c</fullName>
    <label># Event Recurrences</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>