force-app/main/default/objects/Event_Communication__c/fields/Event_Region__c.field-meta.xml
<CustomField>
    <fullName>Event_Region__c</fullName>
    <formula>TEXT( Client_Event_Relation__r.Client__r.enrtcr__Client_Region__c )</formula>
    <label>Event Region</label>
    <type>Text</type>
</CustomField>