force-app/main/default/objects/Event_Communication__c/fields/Event_Subject__c.field-meta.xml
<CustomField>
    <fullName>Event_Subject__c</fullName>
    <inlineHelpText>If the event subject has changed since this record creation, this will not be reflected here</inlineHelpText>
    <label>Event Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>