force-app/main/default/objects/Event_Communication__c/fields/Future_Event__c.field-meta.xml
<CustomField>
    <fullName>Future_Event__c</fullName>
    <formula>NOW() &lt;=  Start__c</formula>
    <inlineHelpText>Email confirmation will only be sent if the event is in the future</inlineHelpText>
    <label>Future Event</label>
    <type>Checkbox</type>
</CustomField>