force-app/main/default/objects/Event_Communication__c/fields/Is_Booked__c.field-meta.xml
<CustomField>
    <fullName>Is_Booked__c</fullName>
    <formula>IF( TEXT(Client_Event_Relation__r.Status__c) = &quot;Booked&quot; , TRUE, FALSE)</formula>
    <inlineHelpText>TRUE if the CER is booked, otherwise it&apos;s FALSE</inlineHelpText>
    <label>Is Booked</label>
    <type>Checkbox</type>
</CustomField>