force-app/main/default/objects/Event_Communication__c/fields/Workers_and_Professions__c.field-meta.xml
<CustomField>
    <fullName>Workers_and_Professions__c</fullName>
    <inlineHelpText>Only accurate at the time of event creation</inlineHelpText>
    <label>Workers and Professions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>