force-app/main/default/objects/Event_Communication__c/recordTypes/Recurring_Appointment_Cancellation.recordType-meta.xml
<RecordType>
    <fullName>Recurring_Appointment_Cancellation</fullName>
    <active>true</active>
    <label>Recurring Appointment Cancellation</label>
</RecordType>