force-app/main/default/objects/Event_Communication__c/recordTypes/Recurring_Appointment_Confirmation.recordType-meta.xml
<RecordType>
    <fullName>Recurring_Appointment_Confirmation</fullName>
    <active>true</active>
    <label>Recurring Appointment Confirmation</label>
</RecordType>