force-app/main/default/objects/Event_Communication__c/recordTypes/Recurring_Appointment_Time_Changed.recordType-meta.xml
<RecordType>
    <fullName>Recurring_Appointment_Time_Changed</fullName>
    <active>true</active>
    <label>Recurring Appointment Time Changed</label>
</RecordType>