force-app/main/default/objects/Event_Communication__c/recordTypes/Single_Appointment_Cancellation.recordType-meta.xml
<RecordType>
    <fullName>Single_Appointment_Cancellation</fullName>
    <active>true</active>
    <label>Single Appointment Cancellation</label>
</RecordType>