force-app/main/default/objects/Event_Communication__c/recordTypes/Single_Appointment_Confirmation.recordType-meta.xml
<RecordType>
    <fullName>Single_Appointment_Confirmation</fullName>
    <active>true</active>
    <label>Single Appointment Confirmation</label>
</RecordType>