force-app/main/default/objects/Event_Communication__c/recordTypes/Single_Appointment_Time_Changed.recordType-meta.xml
<RecordType>
    <fullName>Single_Appointment_Time_Changed</fullName>
    <active>true</active>
    <label>Single Appointment Time Changed</label>
</RecordType>