force-app/main/default/objects/Event_Communication__c/recordTypes/X24_Hour_Reminder.recordType-meta.xml
<RecordType>
    <fullName>X24_Hour_Reminder</fullName>
    <active>true</active>
    <description>To send a 24 hour SMS reminder to Pendula</description>
    <label>24 Hour Reminder</label>
</RecordType>