force-app/main/default/objects/Event_Communication__c/listViews/Cancellation.listView-meta.xml
<ListView>
    <fullName>Cancellation</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Client_Contact__c</columns>
    <columns>Event_Subject__c</columns>
    <columns>Event_Recurrences__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Event_Communication__c.Recurring_Appointment_Cancellation,Event_Communication__c.Single_Appointment_Cancellation</value>
    </filters>
    <label>Cancellation</label>
</ListView>