force-app/main/default/objects/Event_Communication__c/listViews/Time_Change.listView-meta.xml
<ListView>
    <fullName>Time_Change</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Client_Contact__c</columns>
    <columns>Event_Subject__c</columns>
    <columns>Event_Recurrences__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Event_Communication__c.Single_Appointment_Time_Changed</value>
    </filters>
    <label>Time Change</label>
</ListView>