force-app/main/default/objects/Event_Communication__c/listViews/X24_Hour_Reminders.listView-meta.xml
<ListView>
    <fullName>X24_Hour_Reminders</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Client_Event_Relation__c</columns>
    <columns>Client_Contact__c</columns>
    <columns>Event_Subject__c</columns>
    <columns>Event_Recurrences__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Event_Communication__c.X24_Hour_Reminder</value>
    </filters>
    <label>24 Hour Reminders</label>
</ListView>